--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "dependencies": {},
     "devDependencies": {
-        "@types/node": "^9.6.1",
-        "typescript": "^2.8.1",
-        "ts-node": "^5.0.1"
+        "@types/node": "^8.10.36",
+        "ts-node": "^7.0.1",
+        "typescript": "^3.1.3"
     },
     "main": "lib/index.js",
     "scripts": {
