--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "scripts": {
         "start": "node lib/index.js",
         "noglobal": "set NODE_PATH='' && node lib/index.js",
-        "debug": "set NODE_PATH='' && node -r ts-node/register -r ./hotreload -i --inspect-brk=9229 &",
+        "debug": "node -r ts-node/register --inspect-brk=9229 lib/index.js",
         "compile": "set NODE_PATH='' && tsc"
     },
     "author": {
