--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "scripts": {
         "start": "node lib/index.js",
         "noglobal": "set NODE_PATH='' && node lib/index.js",
+        "ts-node": "node -r ts-node/register lib/index.js",
         "debug": "node -r ts-node/register --inspect-brk=9229 lib/index.js",
         "compile": "set NODE_PATH='' && tsc"
     },
